@@ -2,7 +2,7 @@ start.gridelements {
   2 {
     columns.default.wrap.noTrimWrap = |<td class="columns |">|
     columns.default.wrap2 = |</td>
-    columns.1.wrap.noTrimWrap = |<td class="columns |">|
+    columns.1.wrap.noTrimWrap = |<td class="space">&nbsp;</td><td class="columns |">|
     columns.1.wrap2 = |</td>
     wrap.stdWrap.cObject.10.value = <table class="row columns02
     wrap.stdWrap.cObject.30.value = "><tbody><tr>|</tr></tbody></table>
