@@ -2,9 +2,9 @@ start.gridelements {
   3 {
     columns.default.wrap.noTrimWrap = |<td class="columns |">|
     columns.default.wrap2 = |</td>
-    columns.1.wrap.noTrimWrap = |<td class="columns |">|
+    columns.1.wrap.noTrimWrap = |<td class="space">&nbsp;</td><td class="columns |">|
     columns.1.wrap2 = |</td>
-    columns.2.wrap.noTrimWrap = |<td class="columns |">|
+    columns.2.wrap.noTrimWrap = |<td class="space">&nbsp;</td><td class="columns |">|
     columns.2.wrap2 = |</td>
     wrap.stdWrap.cObject.10.value = <table class="row columns03
     wrap.stdWrap.cObject.30.value = "><tbody><tr>|</tr></tbody></table>
