@@ -2,11 +2,11 @@ start.gridelements {
   4 {
     columns.default.wrap.noTrimWrap = |<td class="columns |">|
     columns.default.wrap2 = |</td>
-    columns.1.wrap.noTrimWrap = |<td class="columns |">|
+    columns.1.wrap.noTrimWrap = |<td class="space">&nbsp;</td><td class="columns |">|
     columns.1.wrap2 = |</td>
-    columns.2.wrap.noTrimWrap = |<td class="columns |">|
+    columns.2.wrap.noTrimWrap = |<td class="space">&nbsp;</td><td class="columns |">|
     columns.2.wrap2 = |</td>
-    columns.3.wrap.noTrimWrap = |<td class="columns |">|
+    columns.3.wrap.noTrimWrap = |<td class="space">&nbsp;</td><td class="columns |">|
     columns.3.wrap2 = |</td>
     wrap.stdWrap.cObject.10.value = <table class="row columns04
     wrap.stdWrap.cObject.30.value = "><tbody><tr>|</tr></tbody></table>
